--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "AppSettings" : {
+    "Token": "Super Secret Key"
+  },
+  
   "ConnectionStrings" : {
     "DefaultConnection": "DataSource=DatingApp.Db"
     },
