End of Section 11

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -13,5 +13,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dof7ieqkv",
+    "ApiKey": "688787683415732",
+    "ApiSecret": "oSos8v61o1IcdVX9PblVo0i_GKE"
+  }
 }
