--- a/DatingApp.API/appsettings.Development.json
+++ b/DatingApp.API/appsettings.Development.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+  "ConnectionStrings" : {
+    "DefaultConnection": "Server=HP-STEFANO\\SQLEXPRESS;Database=datingapp;User Id=appuser;Password=password"
+    },  
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
     }
-  }
 }
