--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -4,7 +4,7 @@
   },
   
   "ConnectionStrings" : {
-    "DefaultConnection": "DataSource=DatingApp.Db"
+    "DefaultConnection": "Server=HP-STEFANO\\SQLEXPRESS;Database=datingapp;User Id=appuser;Password=password"
     },
   "Logging": {
     "LogLevel": {
